# heimdall

./: LICENSE
heimdall-bifrost/: .dockerignore  Dockerfile.fastapi  Dockerfile.grpc  README.md  pyproject.toml
heimdall-bifrost/src/heimdall_bifrost/app/: main.py  models.py
heimdall-bifrost/src/heimdall_bifrost/db/: Dockerfile  docker-compose.yml  scylla.py
heimdall-bifrost/src/heimdall_bifrost/listener/: grpc_server.py  metric.proto  metric_pb2.py  metric_pb2_grpc.py
heimdall-bifrost/src/heimdall_bifrost/tests/integration/: test_grpc_listener.py
helm/: Chart.yaml  values.yaml
helm/templates/: app-deployment.yaml  db-statefulset.yaml  grpc-deployment.yaml
vscode-heimdall/: CHANGELOG.md  README.md  package-lock.json  package.json
vscode-heimdall/src/: extension.ts  tracker.ts
vscode-heimdall/src/network/: client.ts  producer.ts
